correcao menu-lateral

--- a/prog2/frontend/tela8.html
+++ b/prog2/frontend/tela8.html
@@ -73,20 +73,7 @@
                 <div class="descricao">DESCRICAO</div>
             </main>
         </div>
-        <script>
-
-            document.querySelector('#categorias > img').onclick = function(){
-                document.getElementsByClassName('barra')[0].style.display = 'grid';
-                document.getElementsByClassName('barra')[0].focus();
-
-            }
-
-            document.querySelector('.barra').onblur = function(){
-
-                document.getElementsByClassName('barra')[0].style.display = 'none';
-
-            }
-
+        <script src="js/aba-lateral.js">
 
         </script>
 
