--- a/prog2/frontend/tela2.html
+++ b/prog2/frontend/tela2.html
@@ -133,20 +133,7 @@
             </main>
         </div>
 
-        <script>
-
-            document.querySelector('#categorias > img').onclick = function(){
-                document.getElementsByClassName('barra')[0].style.display = 'grid';
-                document.getElementsByClassName('barra')[0].focus();
-
-            }
-
-            document.querySelector('.barra').onblur = function(){
-
-                document.getElementsByClassName('barra')[0].style.display = 'none';
-
-            }
-
+        <script src="js/aba-lateral.js">
 
         </script>
 
