--- a/prog2/frontend/tela3.html
+++ b/prog2/frontend/tela3.html
@@ -74,23 +74,11 @@
                 <div class="descricao">DESCRICAO</div>
             </main>
         </div>
+        <script src="js/aba-lateral.js">
+
+        </script>
 
     </body>
 
-    <script>
 
-        document.querySelector('#categorias > img').onclick = function(){
-            document.getElementsByClassName('barra')[0].style.display = 'grid';
-            document.getElementsByClassName('barra')[0].focus();
-
-        }
-
-        document.querySelector('.barra').onblur = function(){
-
-            document.getElementsByClassName('barra')[0].style.display = 'none';
-
-        }
-
-
-    </script>
 </html>
