--- a/prog2/frontend/tela7.html
+++ b/prog2/frontend/tela7.html
@@ -126,20 +126,7 @@
                 </div>
             </main>
         </div>
-        <script>
-
-            document.querySelector('#categorias > img').onclick = function(){
-                document.getElementsByClassName('barra')[0].style.display = 'grid';
-                document.getElementsByClassName('barra')[0].focus();
-
-            }
-
-            document.querySelector('.barra').onblur = function(){
-
-                document.getElementsByClassName('barra')[0].style.display = 'none';
-
-            }
-
+        <script src="js/aba-lateral.js">
 
         </script>
 
