--- a/prog2/frontend/tela9.html
+++ b/prog2/frontend/tela9.html
@@ -49,6 +49,9 @@
                 </div>
             </header>
         </div>
+        <script src="js/aba-lateral.js">
+
+        </script>
 
     </body>
 </html>
