--- a/prog2/frontend/tela5.html
+++ b/prog2/frontend/tela5.html
@@ -17,15 +17,23 @@
             <div class="logo">
                 <img src="img/vitari.jpg">
             </div>
+            <div class="textos">
+                <p>Usuario:
+                <p>Email:
+                <p>Senha:
+                <p>Confirmar senha:
+
+            </div>
 
             <div class="entrada">
 
-                <p>Usuario: <input type="text" name="usuario" id="usuario" autofocus><br>
-                <p>Email: <input type="text" name="email" id="email"><br>
-                <p>Senha: <input type="password" name="senha" id="senha"><br>
-                <p>Confirmar senha: <input type="password" name="confirmasenha" id="confirmasenha"><br>
-                <button type="button" name="entrar">Entrar</button>
+                <input type="text" name="usuario" id="usuario" autofocus><br>
+                <input type="text" name="email" id="email"><br>
+                <input type="password" name="senha" id="senha"><br>
+                <input type="password" name="confirmasenha" id="confirmasenha"><br>
+
             </div>
+            <button type="button" name="entrar">Entrar</button>
 
         </div>
       </div>
