menu lateral adicionado em todas as telas

--- a/prog2/frontend/tela12.html
+++ b/prog2/frontend/tela12.html
@@ -15,6 +15,9 @@
         <link rel="stylesheet" href="css/estilo8.css">
 
         <link rel="stylesheet" href="css/tela12.css">
+
+        <link rel="stylesheet" href="css/menu-lateral.css">
+        <link rel="stylesheet" href="css/menu-lateral-2.css">
     </head>
 
     <body>
@@ -22,6 +25,17 @@
         <div class="grid-conteiner" id="tela">
 
             <header class="grid-conteiner">
+                <div class="barra">
+                    <nav>
+                        <a href="tela14.html">
+                            <div class="link">USUÁRIOS</div>
+                        </a>
+                        <a href="tela10.html">
+                            <div class="link">PRODUTOS</div>
+                        </a>
+                    </nav>
+                </div>
+
                 <div id="opcoes">
                     <img src="img/menu.png" alt="opcoes">
                 </div>
@@ -92,5 +106,8 @@
             </main>
         </div>
 
+        <!-- Scripts -->
+
+        <script src="js/menu-lateral.js"></script>
     </body>
 </html>
