--- a/prog2/frontend/tela2.html
+++ b/prog2/frontend/tela2.html
@@ -133,7 +133,7 @@
             </main>
         </div>
 
-        <script src="js/aba-lateral.js">
+        <script src="js/menu-lateral.js">
 
         </script>
 
