--- a/prog2/frontend/tela8.html
+++ b/prog2/frontend/tela8.html
@@ -73,7 +73,7 @@
                 <div class="descricao">DESCRICAO</div>
             </main>
         </div>
-        <script src="js/aba-lateral.js">
+        <script src="js/menu-lateral.js">
 
         </script>
 
