--- a/prog2/frontend/tela9.html
+++ b/prog2/frontend/tela9.html
@@ -13,6 +13,9 @@
         <link rel="stylesheet" href="css/estilo4.css">
 
         <link rel="stylesheet" href="css/tela9.css">
+
+        <link rel="stylesheet" href="css/menu-lateral.css">
+        <link rel="stylesheet" href="css/menu-lateral-2.css">
     </head>
 
     <body>
@@ -20,6 +23,17 @@
         <div class="grid-conteiner" id="tela">
 
             <header class="grid-conteiner">
+                <div class="barra">
+                    <nav>
+                        <a href="tela14.html">
+                            <div class="link">USUÁRIOS</div>
+                        </a>
+                        <a href="tela10.html">
+                            <div class="link">PRODUTOS</div>
+                        </a>
+                    </nav>
+                </div>
+
                 <div id="opcoes">
                     <img src="img/menu.png" alt="opcoes">
                 </div>
@@ -49,9 +63,9 @@
                 </div>
             </header>
         </div>
-        <script src="js/aba-lateral.js">
 
-        </script>
+        <!-- Scripts -->
 
+        <script src="js/menu-lateral.js"></script>
     </body>
 </html>
