--- a/prog2/frontend/tela10.html
+++ b/prog2/frontend/tela10.html
@@ -14,6 +14,9 @@
         <link rel="stylesheet" href="css/estilo8.css">
 
         <link rel="stylesheet" href="css/tela10.css">
+
+        <link rel="stylesheet" href="css/menu-lateral.css">
+        <link rel="stylesheet" href="css/menu-lateral-2.css">
     </head>
 
     <body>
@@ -21,6 +24,17 @@
         <div class="grid-conteiner" id="tela">
 
             <header class="grid-conteiner">
+                <div class="barra">
+                    <nav>
+                        <a href="tela14.html">
+                            <div class="link">USUÁRIOS</div>
+                        </a>
+                        <a href="tela10.html">
+                            <div class="link">PRODUTOS</div>
+                        </a>
+                    </nav>
+                </div>
+
                 <div id="opcoes">
                     <img src="img/menu.png" alt="opcoes">
                 </div>
@@ -61,5 +75,8 @@
 
         </div>
 
+        <!-- Scripts -->
+
+        <script src="js/menu-lateral.js"></script>
     </body>
 </html>
