--- a/prog2/frontend/tela14.html
+++ b/prog2/frontend/tela14.html
@@ -13,6 +13,9 @@
         <link rel="stylesheet" href="css/estilo4.css">
 
         <link rel="stylesheet" href="css/tela14.css">
+
+        <link rel="stylesheet" href="css/menu-lateral.css">
+        <link rel="stylesheet" href="css/menu-lateral-2.css">
     </head>
 
     <body>
@@ -20,6 +23,17 @@
         <div class="grid-conteiner" id="tela">
 
             <header class="grid-conteiner">
+                <div class="barra">
+                    <nav>
+                        <a href="tela14.html">
+                            <div class="link">USUÁRIOS</div>
+                        </a>
+                        <a href="tela10.html">
+                            <div class="link">PRODUTOS</div>
+                        </a>
+                    </nav>
+                </div>
+
                 <div id="opcoes">
                     <img src="img/menu.png" alt="opcoes">
                 </div>
@@ -52,119 +66,122 @@
             <main class="grid-conteiner">
                 <div id="tabela">
                     <table>
-                    <thead>
-                        <tr>
-                            <th>Login</th>
-                            <th>Email</th>
-                            <th>Excluir</th>
-                        </tr>
-                    </thead>
+                        <thead>
+                            <tr>
+                                <th>Login</th>
+                                <th>Email</th>
+                                <th>Excluir</th>
+                            </tr>
+                        </thead>
 
-                    <tbody>
-                        <tr>
-                            <td>user</td>
-                            <td>user@gmail.com</td>
-                            <td>
-                                <a href="#">
-                                    <img src="img/excluir.png">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>user</td>
-                            <td>user@gmail.com</td>
-                            <td>
-                                <a href="#">
-                                    <img src="img/excluir.png">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>user</td>
-                            <td>user@gmail.com</td>
-                            <td>
-                                <a href="#">
-                                    <img src="img/excluir.png">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>user</td>
-                            <td>user@gmail.com</td>
-                            <td>
-                                <a href="#">
-                                    <img src="img/excluir.png">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>user</td>
-                            <td>user@gmail.com</td>
-                            <td>
-                                <a href="#">
-                                    <img src="img/excluir.png">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>user</td>
-                            <td>user@gmail.com</td>
-                            <td>
-                                <a href="#">
-                                    <img src="img/excluir.png">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>user</td>
-                            <td>user@gmail.com</td>
-                            <td>
-                                <a href="#">
-                                    <img src="img/excluir.png">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>user</td>
-                            <td>user@gmail.com</td>
-                            <td>
-                                <a href="#">
-                                    <img src="img/excluir.png">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>user</td>
-                            <td>user@gmail.com</td>
-                            <td>
-                                <a href="#">
-                                    <img src="img/excluir.png">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>user</td>
-                            <td>user@gmail.com</td>
-                            <td>
-                                <a href="#">
-                                    <img src="img/excluir.png">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>user</td>
-                            <td>user@gmail.com</td>
-                            <td>
-                                <a href="#">
-                                    <img src="img/excluir.png">
-                                </a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                        <tbody>
+                            <tr>
+                                <td>user</td>
+                                <td>user@gmail.com</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/excluir.png">
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>user</td>
+                                <td>user@gmail.com</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/excluir.png">
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>user</td>
+                                <td>user@gmail.com</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/excluir.png">
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>user</td>
+                                <td>user@gmail.com</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/excluir.png">
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>user</td>
+                                <td>user@gmail.com</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/excluir.png">
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>user</td>
+                                <td>user@gmail.com</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/excluir.png">
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>user</td>
+                                <td>user@gmail.com</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/excluir.png">
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>user</td>
+                                <td>user@gmail.com</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/excluir.png">
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>user</td>
+                                <td>user@gmail.com</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/excluir.png">
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>user</td>
+                                <td>user@gmail.com</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/excluir.png">
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>user</td>
+                                <td>user@gmail.com</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/excluir.png">
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </main>
         </div>
 
+        <!-- Scripts -->
+
+        <script src="js/menu-lateral.js"></script>
     </body>
 </html>
