--- a/prog2/frontend/tela7.html
+++ b/prog2/frontend/tela7.html
@@ -126,7 +126,7 @@
                 </div>
             </main>
         </div>
-        <script src="js/aba-lateral.js">
+        <script src="js/menu-lateral.js">
 
         </script>
 
